# toy-renderer-v2

./: .gitignore  CMakeLists.txt  README.md
assets/GLSLshaders/: P3.vs  P3N3U2T3B3.vs  P3N3U2T3B3_blinn.fs  P3N3U2T3B3_deferred.fs  P3N3U2T3B3_normal.fs  P3N3U2T3B3_phong.fs  P3N3U2T3B3_torrance.fs  P3_cube_depth.fs  P3_cube_depth.gs  P3_cube_depth.vs  cubemap.fs  cubemap.vs  deferred_SSAO.fs  deferred_blinn.fs  deferred_normal.fs  pbr_irradmap.fs  (+5 more)
src/: CMakeLists.txt  defines.h  defines.h.in  main.cpp
src/OpenGL/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  LightManager.cpp  LightManager.h  OpenGLViewer.cpp  OpenGLViewer.h  RenderTask.cpp  RenderTask.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  VertexArray.cpp  VertexArray.h  VertexArrayManager.cpp  VertexArrayManager.h
src/geomath/: CMakeLists.txt  bbox.h  color.h  geomath.h  matrix.h  ray.h  transform.h  util.h  vector.h
src/gid/: CMakeLists.txt  GID.cpp  GID.h  GIDManager.cpp  GIDManager.h
src/loader/: CMakeLists.txt  OBJLoader.cpp  OBJLoader.h
src/raytracer/: BVHTree.cpp  BVHTree.h  CMakeLists.txt  RayTraceViewer.cpp  RayTraceViewer.h
src/saver/: CMakeLists.txt  OBJSaver.cpp  OBJSaver.h
src/scene/: BasicShape.cpp  BasicShape.h  CMakeLists.txt  Camera.cpp  Camera.h  Intersection.cpp  Intersection.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Primitive.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
src/window/: CMakeLists.txt  InputManager.cpp  InputManager.h  Window.cpp  Window.h
(+6 files in other folders)
